Fixed section spacing

--- a/client/src/App.less
+++ b/client/src/App.less
@@ -51,3 +51,7 @@
 .topCountries-container {
   padding: 100px 0;
 }
+/* Sorted chart */
+.sorted-chart-container {
+  margin-top: 50px;
+}
